@@ -7,10 +7,10 @@ SSCM_REPOSITORY="${UIM_REPOSITORY}/sigscheme-trunk"
 LIBGCROOTS_REPOSITORY="${UIM_REPOSITORY}/libgcroots-trunk"
 TAGS_REPOSITORY="${UIM_REPOSITORY}/tags"
 #SSCM_URL="${SSCM_REPOSITORY}"
-SSCM_URL="${TAGS_REPOSITORY}/sigscheme-0.7.2"
+SSCM_URL="${TAGS_REPOSITORY}/sigscheme-0.7.3"
 #LIBGCROOTS_URL="${LIBGCROOTS_REPOSITORY}"
-LIBGCROOTS_URL="${TAGS_REPOSITORY}/libgcroots-0.1.3"
-RELEASE_SUFFIX="-alpha"
+LIBGCROOTS_URL="${TAGS_REPOSITORY}/libgcroots-0.1.4"
+RELEASE_SUFFIX="-beta"
 
 CONF_COMMON="--enable-maintainer-mode --disable-warnings-into-error"
 CONF_NONE="$CONF_COMMON --disable-debug --disable-fep --disable-emacs --disable-gnome-applet --disable-kde-applet --disable-pref --disable-dict --without-anthy --without-canna --without-mana --without-prime --without-m17nlib --without-scim --without-gtk2 --without-gnome2 --without-qt --without-qt-immodule --disable-compat-scm --without-eb --without-libedit"
